# project_template_cplusplus

./: .isort.cfg  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/app1/: CMakeLists.txt  app1.cpp  app1.h  main.cpp
python/: python_script.py
src/: CMakeLists.txt
tests/: CMakeLists.txt
